--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,187 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+	/* This defines what 1rem is: 1rem = 10px; 10px / 16px = 62.5%*/
+	font-size: 62.5%;
+}
+body {
+	font-family: 'Lato', sans-serif;
+	font-weight: 400;
+	line-height: 1.7;
+	box-sizing: border-box;
+	padding: 3rem;
+	background-color: lightgray;
+	font-size: 1.25rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* button {
+	background-color: rgb(74, 114, 216);
+	font-size: 1.5rem;
+	padding: 1rem 3rem;
+	margin: 0.5rem 0;
+	color: white;
+	width: 70%;
+} */
+
+button {
+	display: inline-block;
+	border: none;
+	border-radius: 3px;
+	padding: 1rem 2rem;
+	margin: 1rem 0;
+	width: 100%;
+	text-decoration: none;
+
+	color: #ffffff;
+	font-family: sans-serif;
+	font-size: 1.5rem;
+	cursor: pointer;
+	text-align: center;
+	transition: background 250ms ease-in-out, transform 150ms ease;
+	-webkit-appearance: none;
+	-moz-appearance: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button:hover,
+button:focus {
+	background: #064ca2; /*FIXME THIS DOESN'T WORK YET, BECAUSE BUTTON COLOURS ARE SET INFIVIDUALLY*/
 }
 
-.App-link {
-  color: #61dafb;
+button:focus {
+	outline: 1px solid #fff;
+	outline-offset: -4px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:active {
+	transform: scale(0.99);
+}
+
+form {
+	width: 100%;
+	padding: 0 2rem;
+}
+
+form > * {
+	margin: 0.75rem 0;
+}
+
+input {
+	width: 100%;
+	padding: 0.75rem 1rem;
+	box-sizing: border-box;
+}
+
+.form-header {
+	font-size: 2.5rem;
+	font-weight: 600;
+	color: black;
+}
+
+.display {
+	display: flex;
+	justify-content: center;
+	width: 40vw;
+	min-height: 20rem;
+	margin: 2rem auto;
+	padding: 1rem 0;
+	border-radius: 5px;
+}
+
+.product-input {
+	background-color: rgb(243, 241, 241);
+	/* // background-color: $bg-color; */
+}
+
+.product-input button {
+	background-color: #0069ed;
+	/* // background-color: $bg-color; */
+}
+
+.add-stock {
+	background-color: rgb(243, 241, 241);
+	/* // background-color: $bg-color; */
+}
+.add-stock button {
+	background: #0069ed;
+}
+
+.remove-stock {
+	background-color: rgb(243, 241, 241);
+	/* // background-color: $bg-color; */
+}
+.remove-stock button {
+	background: black;
+}
+
+.stock-levels {
+	flex-direction: column;
+	background-color: rgb(243, 241, 241);
+}
+
+.product {
+	box-sizing: border-box;
+	/* width: 100%; */
+	padding: 0 2rem;
+}
+
+.product__01,
+.product__02,
+.product__03 {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	padding: 0.25rem 1rem;
+	background-color: #fff;
+	/* margin: 1rem; */
+	/* border: 1px solid lightgrey; */
+	box-shadow: 1px 0 0 0 #888, 0 1px 0 0 #888, 1px 1px 0 0 #888,
+		/* Just to fix the corner */ 1px 0 0 0 #888 inset, 0 1px 0 0 #888 inset;
+
+	/* &--label {
+		font-weight: bolder;
+	} */
+}
+
+.select-product {
+	display: block;
+	font-size: inherit;
+	font-family: sans-serif;
+	/* font-weight: 700; */
+	color: #444;
+	line-height: 1.3;
+	padding: 0.6em 1.4em 0.5em 0.8em;
+	width: 100%;
+	max-width: 100%;
+	box-sizing: border-box;
+	margin: 0;
+	border: 1px solid #aaa;
+	box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+	border-radius: 3px;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	background-color: #fff;
+	background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+		linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
+	background-repeat: no-repeat, repeat;
+	background-position: right 0.7em top 50%, 0 0;
+	background-size: 0.65em auto, 100%;
+}
+.select-product::-ms-expand {
+	display: none;
+}
+.select-product:hover {
+	border-color: #888;
+}
+.select-product:focus {
+	border-color: #aaa;
+	box-shadow: 0 0 1px 3px rgba(59, 153, 252, 0.7);
+	box-shadow: 0 0 0 3px -moz-mac-focusring;
+	color: #222;
+	outline: none;
+}
+.select-product option {
+	font-weight: normal;
 }
