--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-	text-align: center;
-}
-
 html {
 	/* This defines what 1rem is: 1rem = 10px; 10px / 16px = 62.5%*/
 	font-size: 62.5%;
@@ -73,6 +69,12 @@ input {
 	box-sizing: border-box;
 }
 
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
 .form-header {
 	font-size: 2.5rem;
 	font-weight: 600;
@@ -80,8 +82,6 @@ input {
 }
 
 .display {
-	display: flex;
-	justify-content: center;
 	width: 40vw;
 	min-height: 20rem;
 	margin: 2rem auto;
@@ -100,6 +100,8 @@ input {
 }
 
 .add-stock {
+	display: flex;
+	/* justify-content: center; */
 	background-color: rgb(243, 241, 241);
 	/* // background-color: $bg-color; */
 }
@@ -108,6 +110,9 @@ input {
 }
 
 .remove-stock {
+	display: flex;
+	align-content: flex-start;
+	/* justify-content: center; */
 	background-color: rgb(243, 241, 241);
 	/* // background-color: $bg-color; */
 }
@@ -116,6 +121,8 @@ input {
 }
 
 .stock-levels {
+	display: flex;
+	/* justify-content: center; */
 	flex-direction: column;
 	background-color: rgb(243, 241, 241);
 }
