--- a/src/UI/Dropdown.module.css
+++ b/src/UI/Dropdown.module.css
@@ -1,73 +1,4 @@
-html {
-	/* This defines what 1rem is: 1rem = 10px; 10px / 16px = 62.5%*/
-	font-size: 62.5%;
-}
-body {
-	font-family: 'Lato', sans-serif;
-	font-weight: 400;
-	line-height: 1.7;
-	box-sizing: border-box;
-	padding: 3rem;
-	background-color: lightgray;
-	font-size: 1.25rem;
-}
-
-button {
-	display: inline-block;
-	border: none;
-	border-radius: 3px;
-	padding: 1rem 2rem;
-	margin: 1rem 0;
-	width: 100%;
-	text-decoration: none;
-
-	color: #ffffff;
-	font-family: sans-serif;
-	font-size: 1.5rem;
-	cursor: pointer;
-	text-align: center;
-	transition: background 250ms ease-in-out, transform 150ms ease;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-}
-
-button:focus {
-	outline: 1px solid #fff;
-	outline-offset: -4px;
-}
-
-button:active {
-	transform: scale(0.99);
-}
-
-form {
-	width: 100%;
-	padding: 0 2rem;
-}
-
-form > * {
-	margin: 0.75rem 0;
-}
-
-input {
-	width: 100%;
-	padding: 0.75rem 1rem;
-	box-sizing: border-box;
-}
-
-.form-header {
-	font-size: 2.5rem;
-	font-weight: 600;
-	color: black;
-}
-
-.invalid p,
-.invalid label {
-	font-weight: bold;
-	color: red;
-}
-
-/* .select-product {
+.select {
 	display: block;
 	font-size: inherit;
 	font-family: sans-serif;
@@ -92,19 +23,19 @@ input {
 	background-position: right 0.7em top 50%, 0 0;
 	background-size: 0.65em auto, 100%;
 }
-.select-product::-ms-expand {
+.select::-ms-expand {
 	display: none;
 }
-.select-product:hover {
+.select:hover {
 	border-color: #888;
 }
-.select-product:focus {
+.select:focus {
 	border-color: #aaa;
 	box-shadow: 0 0 1px 3px rgba(59, 153, 252, 0.7);
 	box-shadow: 0 0 0 3px -moz-mac-focusring;
 	color: #222;
 	outline: none;
 }
-.select-product option {
+.select option {
 	font-weight: normal;
-} */
+}
