--- a/src/components/AddStock.module.css
+++ b/src/components/AddStock.module.css
@@ -12,9 +12,33 @@
 }
 
 .display {
-	min-width: 40vw;
+	width: 40vw;
 	min-height: 20rem;
 	margin: 2rem auto;
 	padding: 1rem 0;
 	border-radius: 5px;
+}
+
+@media only screen and (max-width: 1240px) {
+	.display {
+		width: 50vw;
+	}
+}
+
+@media only screen and (max-width: 1024px) {
+	.display {
+		width: 60vw;
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	.display {
+		width: 70vw;
+	}
+}
+
+@media only screen and (max-width: 600px) {
+	.display {
+		width: 85vw;
+	}
 }
